[package]
name = "speed_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.116"
url = "2.5.0"
chrono = "0.4.38"
#native-tls = "0.2.11"
#rustls-native-certs = "0.7.0"
rustls = "0.23.5"
aws-lc-sys = "0.16.0"
#hyper-tls = "0.6.0"
#openssl-sys = "0.9.102"
tungstenite = "0.21.0"

[dependencies.rand]
version = "0.8.5"
features = ["default", "serde"]

#[dependencies.openssl]
#version = "0.10.64"
#eatures = ["vendored"]

[dependencies.serde]
version = "1.0.198"
features = ["derive"]

[dependencies.tokio]
version = "1.37.0"
features = ["full"]

[dependencies.reqwest]
version = "0.12.4"
features = ["blocking", "json", "multipart", "stream"]

[dependencies.tokio-tungstenite]
version = "0.21.0"
features = ["default", "connect", "native-tls", "rustls-tls-native-roots"]

[dependencies.futures-util]
version = "0.3.30"
default-features = false
features = ["async-await", "sink", "std"]

[dev-dependencies]
futures-channel = "0.3.30"
