[package]
name = "speed_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.137"
url = "2.5.4"
chrono = "0.4.39"
rustls = "0.23.21"
tungstenite = "0.26.1"
speedtest-rs = "0.2.0"
futures = "0.3.31"
anyhow = "1.0.95"
http = "1.2.0"

[dependencies.rand]
version = "0.8.5"
features = ["default", "serde"]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.tokio]
version = "1.37.0"
features = ["full"]

[dependencies.reqwest]
version = "0.12.12"
features = ["blocking", "json", "multipart", "stream"]

[dependencies.tokio-tungstenite]
version = "0.26.1"
features = ["default", "connect", "native-tls", "rustls-tls-native-roots"]

[dependencies.futures-util]
version = "0.3.31"
default-features = false
features = ["async-await", "sink", "std"]

[dev-dependencies]
futures-channel = "0.3.31"
